src/test/deca/syntax/invalid/decl_missing_semi.deca

//Syntaxe fin d'instruction
//Attendu : erreur -> missing ; ou  ; expected

{
    int x = 5
}